# flake8-deprecated

./: .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  flake8_deprecated.py  pyproject.toml  requirements-lint.in  requirements-lint.txt  requirements.in  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: testing.yml
